# Learn-LangChain

./: Chroma.ipynb  FAISS-Vector.ipynb  HuggingFace.ipynb  embedding.ipynb  lang.ipynb  main.py  oilrefineries.json  ollama.ipynb  pyproject.toml  requirements.txt  tn-wiki.txt
faiss_car/: index.faiss  index.pkl
